...
                AccountOption(
                    label = "Delete Account",
                    backgroundColor = Color.Red,
                    onClick = {
                      Toast.makeText(context, "Failure to reach database", Toast.LENGTH_LONG).show()
                    },
                    testTag = "deleteAccountSection")
              }

              item {
                AccountOption(
                    label = "Log out",
                    backgroundColor = Purple40,
...
